backend/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wolvox-integration
  namespace: wolvox
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: api.wolvox-integration.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wolvox-integration
            port:
              number: 80
  tls:
  - hosts:
    - api.wolvox-integration.com
    secretName: wolvox-tls
